# rust-service-graphql.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: .gitignore  .justfile  Cargo.toml  README.md  {{ project-name }}.yaml
contents/base/{{ project-name }}/crates/{{ project_name }}_bin/: Cargo.toml  README.md
contents/base/{{ project-name }}/crates/{{ project_name }}_bin/src/: cli.rs  main.rs  settings.rs  traces.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_core/: Cargo.toml  README.md  build.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_core/src/: auth.rs  builder.rs  definition.rs  errors.rs  lib.rs  settings.rs  state.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_core/src/conversion/: common.rs  externals.rs  mod.rs  traits.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_core/src/graphql/: README.md  cart.rs  mod.rs  mutation.rs  my_obj.rs  query.rs  roots.rs  schema.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_core/src/proto/: mod.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_graphql/: Cargo.toml
contents/base/{{ project-name }}/crates/{{ project_name }}_graphql/src/: schema.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_graphql/src/model/: mod.rs  roots.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_graphql/src/model/types/: cart.rs  mod.rs  my_obj.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_persistence/: README.md
contents/base/{{ project-name }}/crates/{{ project_name }}_persistence/src/: lib.rs  settings.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_server/: Cargo.toml
contents/base/{{ project-name }}/crates/{{ project_name }}_server/src/: builder.rs  lib.rs
contents/base/{{ project-name }}/crates/{{ project_name }}_server/tests/server/: lib.rs
contents/base/{{ project-name }}/specs/clients/: .gitkeep
contents/base/{{ project-name }}/xtask/src/: cli.rs  main.rs
contents/entity_graphql/{{ project-name }}/crates/{{ project_name }}_core/src/conversion/: {{ entity_name }}.rs
contents/entity_graphql/{{ project-name }}/crates/{{ project_name }}_core/src/graphql/: {{ entity_name }}.rs
contents/persistence_postgres/{{ project-name }}/crates/{{ project_name }}_persistence/: Cargo.toml  README.md
contents/persistence_postgres/{{ project-name }}/crates/{{ project_name }}_persistence/src/: builder.rs
templates/macros/: rust
