[package]
name = "{{ project_name }}_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{ project_name }}_persistence = { path = "../{{ project_name }}_persistence" }

anyhow = "1.0"
prost = "0.12.4"
serde = {version = "1.0", features = ["serde_derive"] }
tonic = "0.11.0"
tracing = "0.1"
tracing-attributes = "0.1"

[dev-dependencies]
tokio = {version = "1.17.0", features = ["rt", "macros"]}

[[test]]
name = "core"
path = "tests/core/lib.rs"

[build-dependencies]
tonic-build = "0.11.0"