[package]
name = "{{ project_name }}_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{ project_name }}_persistence = { path = "../{{ project_name }}_persistence" }

async-graphql = "7.0.3"
serde = {version = "1.0", features = ["serde_derive"] }
anyhow = "1.0"
url = "2.5.0"
prost = "0.12.0"
tonic = "0.11.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.11.0"